2023-10-11T08:12:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6479773721 # 1240
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 652 1027 / 676 1065
* notice: next accum: outdated-unq outdated-all / unq all: 652 1027 / 678 1067
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -2 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-27 2023-10-11]

2023-10-11T00:41:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6476450023 # 1239
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 6 38
* notice: prev accum: outdated-unq outdated-all / unq all: 652 1027 / 676 1064
* notice: next accum: outdated-unq outdated-all / unq all: 652 1027 / 676 1065
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +4 +7 -0 -0 / 4 7
* notice: removed / changed dates: [] / [2023-10-10]

2023-10-10T16:11:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6471965945 # 1238
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
* notice: last 14d: unq all: 6 37
* notice: prev accum: outdated-unq outdated-all / unq all: 652 1027 / 675 1062
* notice: next accum: outdated-unq outdated-all / unq all: 652 1027 / 676 1064
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +4 +6 -0 -0 / 4 6
* notice: removed / changed dates: [] / [2023-10-10]

2023-10-10T08:12:24Z: