@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-11T08:12:28Z",
-  "count_outdated" : 1027,
-  "uniques_outdated" : 652,
-  "count" : 1067,
+  "timestamp" : "2023-10-12T00:39:39Z",
+  "count_outdated" : 1030,
+  "uniques_outdated" : 654,
+  "count" : 1068,
   "uniques" : 678,
   "clones" : [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 2,
@@ -124,9 +115,9 @@
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
