@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-28T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
