@@ -1,3 +1,12 @@
+2023-10-12T00:39:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6489714093 # 1242
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
+* notice: last 14d: unq all: 6 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 652 1027 / 678 1067
+* notice: next accum: outdated-unq outdated-all / unq all: 654 1030 / 678 1068
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2023-09-27] / [2023-10-11]
+
 2023-10-11T08:12:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6479773721 # 1240
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
